tests/scripts/errors/errors_6.zs
class Car {
	int a;
	int a;

	void blah(){}
	void blah(){}
}
class Car {
}

int a = 1;
int a = 1;

void blah(){}
void blah(){}
